--- a/chapter2.tex
+++ b/chapter2.tex
@@ -11,17 +11,37 @@ In the previous chapter, we established a framework for comprehensive high-quali
 
 \section{Results}
 
+\todo{Outline the structure of the results section}
+
 \subsection{Functional maps of SUMO1 and its cognate E2 enable biophysical insights}
 
-Based on the DMS map of UBE2I (Figure 2A) several biochemical observations could be made. Consistent with observations made in smaller-scale biochemical studies of the SUMO E2 conjugase14,15, the areas most sensitive to mutation are those proximal to the active site (particularly residues 81-88, 90, 92-96, and 127-130), and the N-terminal alpha helix which mediates four protein interactions including the critical interaction with the E1 SUMO-activating complex. Another interesting feature of the map is the alternating tendency towards damaging and benign substitutions across positions 55-65. A comparison with solvent accessibility reveals this to be caused by alternating externally and internally-oriented residues, with the latter positions constrained to be hydrophobic. This alternating tendency is also reflected in evolutionary conservation across these positions.
+\todo{Quickly recap how maps for UBE2I and SUMO1 were made}
 
-When comparing individual protein interaction interfaces, the most substantial fitness defects are observed in the interfaces for the E1 activating complex binding interface and the  covalent and noncovalent SUMO binding interfaces  (Supplementary Figure S5).  The importance of residues at the interfaces mediating covalent and noncovalent interaction SUMO is made apparent by ‘painting’ the surface of the UBE2I structure with the median fitness score at each residue position (Figure 2B). 
+Based on the DMS map of UBE2I (Figure~\ref{fig:}A) several biochemical observations could be made. Consistent with observations made in smaller-scale biochemical studies of the SUMO E2 conjugase\cite{bencsath_identification_2002,bernier-villamor_structural_2002}, the areas most sensitive to mutation are those proximal to the active site (particularly residues 81-88, 90, 92-96, and 127-130), and the N-terminal alpha helix which mediates four protein interactions including the critical interaction with the E1 SUMO-activating complex. Another interesting feature of the map is the alternating tendency towards damaging and benign substitutions across positions 55-65. A comparison with solvent accessibility reveals this to be caused by alternating externally and internally-oriented residues, with the latter positions constrained to be hydrophobic. This alternating tendency is also reflected in evolutionary conservation across these positions.
 
-Intriguingly, many sites show fitness that is better than wildtype (e.g., positions 74, 76, 88, 89, 91 and 98). Manual functional complementation spotting assays confirmed that complementation with these mutants allows greater growth than does the wild type human protein, but resemble more closely the growth at the permissive temperature for the ubc-ts strain (Supplementary Figure S6). One might be tempted to interpret these cases as reversions to residues present in the yeast protein. However, a comparison of fitness score distributions between changes to S. cerevisiae  residues and those occurring in D. discoideum or D. melanogaster showed no significant difference (Supplementary Figure S7). Recognizing that in this assay, human UBE2I must function with the yeast versions of other sumoylation pathway members, it stands to reason that some substitutions could be adaptive by improving compatibility with yeast interaction partners. A comparison with co-crystal structure data16 shows that many of the apparently-adaptive residues are located on the surface facing the general direction of the substrate, with some being in direct contact with the substrate’s sumoylation motif (Figure 2C). This suggests a possible adaptation via improved recognition of substrates for which sumoylation is most important for yeast growth. Indeed, in vitro sumoylation assays performed previously for a small number of UBE2I mutants revealed increased sumoylation for some substrates15. Comparing our map with these sumoylation assay results, we confirmed that above-WT complementation levels were enriched for cases of substrate specificity shift (Supplementary Figure S8).
+When comparing individual protein interaction interfaces, the most substantial fitness defects are observed in the interfaces for the E1 activating complex binding interface and the  covalent and noncovalent SUMO binding interfaces  (Supplementary Figure S5).  The importance of residues at the interfaces mediating covalent and noncovalent interaction SUMO is made apparent by ‘painting’ the surface of the UBE2I structure with the median fitness score at each residue position (Figure~\ref{fig:ube2i_interfaces}). 
 
-Interestingly, residues A15 and T108 appear adaptive but do not face towards the substrate, instead forming part of the interface with the E3 SUMO ligase RanBP2, and flank a small cavity on UBE2I’s surface into which RanBP2 inserts a phenylalanine residue upon binding. Changing either A15 or T108 into aromatic residues results in a large fitness increase, which may result from gain of a π-stack interaction that strengthens E2-E3 binding (Supplementary Figure S9).
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\textwidth]{img/ube2i_interfaces.pdf}
+	\caption{Complementation fitness of mutations at interaction interfaces. A) Median mutant fitness mapped to the crystal structure of UBE2I. The $\Psi$KXE substrate recognition motif is shown as green stick model, covalently and non-covalently bound SUMO are shown as crimson and brown cartoon model, respectively. B) Mutant fitness scores distributions for residues at different interaction interfaces. }
+	\label{fig:ube2i_interfaces}
+\end{figure}
 
-Reasoning that mutations that allow a protein to work better with its yeast partners would generally work less well with its human partners, we wished to test the hypothesis that substitutions exhibiting greater-than-wild-type complementation in yeast tended to be deleterious in humans. We also wished to test more generally whether site-specific models of sequence evolution derived from the UBE2I data are consistent with standard site-specific evolution models that do not use experimental functional assays, as has been shown previously for other DMS data17,18. To investigate both of these questions, we assessed three alternative versions of the UBE2I data, and for each we assessed the extent to which each resulting dataset agreed with standard site-specific evolution models.  The three versions were: a) untransformed;  b) transformed such that adaptive values to be wildtype (i.e.,  replace scores > 1 with 1); and c) transformed such that adaptive values are deleterious (by inverting scores > 1 such that score X is replaced by 1/X ).  For each version, because imputed and regularized data makes use of conservation data, we avoided circularity by considering only unregularized scores.  We evaluated the likelihood of alignments under: a standard site-specific model that is not informed by DMS19, site-specific models derived from each of three transformed UBE2I DMS datasets, and a site-specific model derived from DMS data that had been randomized between sites (see Methods for details).  Each of the three transformed versions of UBE2I DMS data yielded models that fit aligned homologs better than were obtained using either the standard model or the randomized-sites DMS model.  Of the three models derived from the three transformed DMS versions, model (c) yielded the best-fit according to the Akaike Information Criterion for model selection (see Supplementary Text).  Taken together, our results suggest missense mutations in UBE2I that lead to improved function in yeast are likely to reduce function in humans.
+Intriguingly, many sites show fitness that is better than wildtype (e.g., positions 74, 76, 88, 89, 91 and 98). Manual functional complementation spotting assays confirmed that complementation with these mutants allows greater growth than does the wild type human protein, but resemble more closely the growth at the permissive temperature for the \textit{ubc9-ts} strain (Figure~\ref{fig:hyperactive}A). One might be tempted to interpret these cases as reversions to residues present in the yeast protein. However, a comparison of fitness score distributions between changes to S. cerevisiae  residues and those occurring in the distant species \species{Dictyostelium~discoideum} (amoeba) or \species{Drosophila~melanogaster} (fly) showed no significant difference (Figure~\ref{fig:hyperactive}B). Recognizing that in this assay, human UBE2I must function with the yeast versions of other sumoylation pathway members, it stands to reason that some substitutions could be adaptive by improving compatibility with yeast interaction partners. A comparison with co-crystal structure data16 shows that many of the apparently-adaptive residues are located on the surface facing the general direction of the substrate, with some being in direct contact with the substrate’s sumoylation motif (Figure~\ref{fig:hyperactive}C). This suggests a possible adaptation via improved recognition of substrates for which sumoylation is most important for yeast growth. Indeed, in vitro sumoylation assays performed previously for a small number of UBE2I mutants revealed increased sumoylation for some substrates15. Comparing our map with these sumoylation assay results, we confirmed that above-WT complementation levels were enriched for cases of substrate specificity shift (Supplementary Figure S8).
+
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\textwidth]{img/hyperactive.pdf}
+	\caption{Hyperactive}
+	\label{fig:hyperactive}
+\end{figure}
+
+
+Interestingly, residues A15 and T108 appear adaptive but do not face towards the substrate, instead forming part of the interface with the E3 SUMO ligase RanBP2, and flank a small cavity on UBE2I’s surface into which RanBP2 inserts a phenylalanine residue upon binding. Changing either A15 or T108 into aromatic residues results in a large fitness increase, which may result from gain of a $\pi$-stack interaction that strengthens E2-E3 binding (Supplementary Figure S9).
+
+Reasoning that mutations that allow a protein to work better with its yeast partners would generally work less well with its human partners, we wished to test the hypothesis that substitutions exhibiting greater-than-wild-type complementation in yeast tended to be deleterious in humans. We also wished to test more generally whether site-specific models of sequence evolution derived from the UBE2I data are consistent with standard site-specific evolution models that do not use experimental functional assays, as has been shown previously for other DMS data17,18. To investigate both of these questions, we assessed three alternative versions of the UBE2I data, and for each we assessed the extent to which each resulting dataset agreed with standard site-specific evolution models.  The three versions were: a) untransformed;  b) transformed such that adaptive values to be wildtype (i.e., replace scores greater than 1 with 1); and c) transformed such that adaptive values are deleterious (by inverting scores greater than 1 such that score $x$ is replaced by $\frac{1}{x}$ ).  For each version, because imputed and regularized data makes use of conservation data, we avoided circularity by considering only unregularized scores.  We evaluated the likelihood of alignments under: a standard site-specific model that is not informed by DMS19, site-specific models derived from each of three transformed UBE2I DMS datasets, and a site-specific model derived from DMS data that had been randomized between sites (see Methods for details).  Each of the three transformed versions of UBE2I DMS data yielded models that fit aligned homologs better than were obtained using either the standard model or the randomized-sites DMS model.  Of the three models derived from the three transformed DMS versions, model (c) yielded the best-fit according to the Akaike Information Criterion for model selection (see Supplementary Text).  Taken together, our results suggest missense mutations in UBE2I that lead to improved function in yeast are likely to reduce function in humans.
 
 
 \subsubsection{Functional maps recapitulate known biology}
@@ -30,7 +50,14 @@ Reasoning that mutations that allow a protein to work better with its yeast part
 
 \subsubsection{Intragenic epistasis and compensatory mutations}
 
-Full-length UBE2I clones generated for DMS-BarSEQ analysis often encoded more than one amino acid change. Multi-mutant clones offer the opportunity to search for intragenic genetic interactions. Genetic interaction is defined when a combination of mutations yields an unexpected phenotypic effect, so that identifying genetic interactions requires that we model the phenotype expected from a combination of mutations, given the single-mutant effects.  Here we used a previously-described multiplicative model20,21 in which genetic interaction is measured as ij=fifj-fij, where fi and fj represent single mutant fitness and fij represents double mutant fitness scores. Most double mutants (71\%) did not show a significant deviation from ij= 0 under this model, while 328 position pairs did show significant genetic interaction (Figure 3A, see Methods). Of particular interest are compensatory interactions, i.e. cases where a double mutation is more fit than either of the component single mutations.  Where compensatory residues are proximal in the protein structure, the combination of two mutant residues may be able to re-establish a physical interaction that was lost in each of the single mutants. Although the majority of genetically interacting sites were not proximal in the structure (Figure 4B), there were interesting exceptions. For example, the I4T-P69S double mutant appears to exhibit compensatory behaviour: In the wild type structure, the van-der-Waals radii of the two residues are in direct contact (Figure 4C). Either mutation alone would be expected to destabilize the hydrophobic interaction between isoleucine and proline.  However, In the double mutant, hydroxyl groups on the two residues could adopt a hydrogen bond that re-establishes interaction and re-stabilizes the fold. 
+Full-length UBE2I clones generated for DMS-BarSEQ analysis often encoded more than one amino acid change. Multi-mutant clones offer the opportunity to search for intragenic genetic interactions. Genetic interaction is defined when a combination of mutations yields an unexpected phenotypic effect, so that identifying genetic interactions requires that we model the phenotype expected from a combination of mutations, given the single-mutant effects.  Here we used a previously-described multiplicative model 20,21 in which genetic interaction is measured as $\varepsilon_{ij} = f_i \cdot f_j - f_{ij}$, where $f_i$ and $f_j$ represent single mutant fitness and fij represents double mutant fitness scores. Most double mutants (71\%) did not show a significant deviation from $\varepsilon_{ij} = 0$ under this model, while 328 position pairs did show significant genetic interaction (Figure~\ref{fig:epsistasis}, see Methods). Of particular interest are compensatory interactions, i.e. cases where a double mutation is more fit than either of the component single mutations.  Where compensatory residues are proximal in the protein structure, the combination of two mutant residues may be able to re-establish a physical interaction that was lost in each of the single mutants. Although the majority of genetically interacting sites were not proximal in the structure (Figure~\ref{fig:epsistasis}B), there were interesting exceptions. For example, the I4T-P69S double mutant appears to exhibit compensatory behaviour: In the wild type structure, the van-der-Waals radii of the two residues are in direct contact (Figure~\ref{fig:epsistasis}C). Either mutation alone would be expected to destabilize the hydrophobic interaction between isoleucine and proline.  However, In the double mutant, hydroxyl groups on the two residues could adopt a hydrogen bond that re-establishes interaction and re-stabilizes the fold (Figure~\ref{fig:epsistasis}D).
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=\textwidth]{img/epistasis.pdf}
+	\caption{Epistasis}
+	\label{fig:epsistasis}
+\end{figure}
 
 
 \subsection{Functional maps of three human disease genes}
