--- a/thesis.bib
+++ b/thesis.bib
@@ -1818,3 +1818,61 @@ A technique for developing specific and potent enzyme inhibitors is validated on
 	pages = {1570--1575},
 	file = {Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/XZDB6VTQ/ng.3700.html:text/html}
 }
+
+@article{firnberg_pfunkel:_2012,
+	title = {{PFunkel}: {Efficient}, {Expansive}, {User}-{Defined} {Mutagenesis}},
+	volume = {7},
+	issn = {1932-6203},
+	shorttitle = {{PFunkel}},
+	url = {http://journals.plos.org/plosone/article?id=10.1371/journal.pone.0052031},
+	doi = {10.1371/journal.pone.0052031},
+	abstract = {We introduce PFunkel, a versatile method for extensive, researcher-defined DNA mutagenesis using a ssDNA or dsDNA template. Once the template DNA is prepared, the method can be completed in a single day in a single tube, and requires no intermediate DNA purification or sub-cloning. PFunkel can be used for site-directed mutagenesis at an efficiency approaching 100\%. More importantly, PFunkel allows researchers the unparalleled ability to efficiently construct user-defined libraries. We demonstrate the creation of a library with site-saturation at four distal sites simultaneously at 70\% efficiency. We also employ PFunkel to create a comprehensive codon mutagenesis library of the TEM-1 ß-lactamase gene. We designed this library to contain 18,081 members, one for each possible codon substitution in the gene (287 positions in TEM-1 x 63 possible codon substitutions). Deep sequencing revealed that ∼97\% of the designed single codon substitutions are present in the library. From such a library we identified 18 previously unreported adaptive mutations that each confer resistance to the ß-lactamase inhibitor tazobactam. Three of these mutations confer resistance equal to or higher than that of the most resistant reported TEM-1 allele and have the potential to emerge clinically.},
+	number = {12},
+	urldate = {2017-02-09},
+	journal = {PLOS ONE},
+	author = {Firnberg, Elad and Ostermeier, Marc},
+	month = dec,
+	year = {2012},
+	keywords = {Amino acid substitution, Annealing (genetics), DNA polymerase, Mutagenesis, Mutation, Polymerase chain reaction, Polymerases, Substitution mutation},
+	pages = {e52031},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/AWXM2B5E/Firnberg and Ostermeier - 2012 - PFunkel Efficient, Expansive, User-Defined Mutage.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/48AXDZC9/article.html:text/html}
+}
+
+@article{leproust_synthesis_2010,
+	title = {Synthesis of high-quality libraries of long (150mer) oligonucleotides by a novel depurination controlled process},
+	volume = {38},
+	issn = {0305-1048},
+	url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2860131/},
+	doi = {10.1093/nar/gkq163},
+	abstract = {We have achieved the ability to synthesize thousands of unique, long oligonucleotides (150mers) in fmol amounts using parallel synthesis of DNA on microarrays. The sequence accuracy of the oligonucleotides in such large-scale syntheses has been limited by the yields and side reactions of the DNA synthesis process used. While there has been significant demand for libraries of long oligos (150mer and more), the yields in conventional DNA synthesis and the associated side reactions have previously limited the availability of oligonucleotide pools to lengths {\textless}100 nt. Using novel array based depurination assays, we show that the depurination side reaction is the limiting factor for the synthesis of libraries of long oligonucleotides on Agilent Technologies’ SurePrint® DNA microarray platform. We also demonstrate how depurination can be controlled and reduced by a novel detritylation process to enable the synthesis of high quality, long (150mer) oligonucleotide libraries and we report the characterization of synthesis efficiency for such libraries. Oligonucleotide libraries prepared with this method have changed the economics and availability of several existing applications (e.g. targeted resequencing, preparation of shRNA libraries, site-directed mutagenesis), and have the potential to enable even more novel applications (e.g. high-complexity synthetic biology).},
+	number = {8},
+	urldate = {2017-02-09},
+	journal = {Nucleic Acids Research},
+	author = {LeProust, Emily M. and Peck, Bill J. and Spirin, Konstantin and McCuen, Heather Brummel and Moore, Bridget and Namsaraev, Eugeni and Caruthers, Marvin H.},
+	month = may,
+	year = {2010},
+	pmid = {20308161},
+	pmcid = {PMC2860131},
+	pages = {2522--2540},
+	annote = {mutagenesis pools},
+	file = {PubMed Central Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/IR8BERG3/LeProust et al. - 2010 - Synthesis of high-quality libraries of long (150me.pdf:application/pdf}
+}
+
+@article{bencsath_identification_2002,
+	title = {Identification of a {Multifunctional} {Binding} {Site} on {Ubc}9p {Required} for {Smt}3p {Conjugation}},
+	volume = {277},
+	issn = {0021-9258, 1083-351X},
+	url = {http://www.jbc.org/content/277/49/47938},
+	doi = {10.1074/jbc.M207442200},
+	abstract = {Ubiquitin-like proteins (ub-lps) are conjugated by a conserved enzymatic pathway, involving ATP-dependent activation at the C terminus by an activating enzyme (E1) and formation of a thiolester intermediate with a conjugating enzyme (E2) prior to ligation to the target. Ubc9, the E2 for SUMO, synthesizes polymeric chains in the presence of its E1 and MgATP. To better understand conjugation of ub-lps, we have performed mutational analysis of Saccharomyces cerevisiae Ubc9p, which conjugates the SUMO family member Smt3p. We have identified Ubc9p surfaces involved in thiolester bond and Smt3p-Smt3p chain formation. The residues involved in thiolester bond formation map to a surface we show is the E1 binding site, and E2s for other ub-lps are likely to bind to their E1s at a homologous site. We also find that this same surface binds Smt3p. A mutation that impairs binding to E1 but not Smt3p impairs thiolester bond formation, suggesting that it is the E1 interaction at this site that is crucial. Interestingly, other E2s and their relatives also use this same surface for binding to ubiquitin, E3s, and other proteins, revealing this to be a multipurpose binding site and suggesting that the entire E1-E2-E3 pathway has coevolved for a given ub-lp.},
+	language = {en},
+	number = {49},
+	urldate = {2017-02-24},
+	journal = {Journal of Biological Chemistry},
+	author = {Bencsath, Kalman P. and Podgorski, Michael S. and Pagala, Vishwajeeth R. and Slaughter, Clive A. and Schulman, Brenda A.},
+	month = dec,
+	year = {2002},
+	pmid = {12354763},
+	pages = {47938--47945},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/Z322M7BU/Bencsath et al. - 2002 - Identification of a Multifunctional Binding Site o.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/QGUDH47U/47938.html:text/html}
+}
