--- a/chapter2.tex
+++ b/chapter2.tex
@@ -7,19 +7,23 @@ Within coming decades, millions of people will have their genome sequenced. Unfo
 
 Recent DMS studies have provided individual maps the critical RING domain of BRCA1~\cite{starita_massively_2015} associated with breast cancer risk, and the PPAR$\gamma$ protein associated with Mendelian lipodystrophy and increased risk of type 2 diabetes~\cite{majithia_prospective_2016}. Such maps can not only identify functionality of a clinical variant accurately, but also potentially do so in advance of that variant's first clinical presentation. 
 
-In the previous chapter, we established a framework for comprehensive high-quality screening of the functional effects across all possible missense mutations in human genes. The functional complementation assay used in the assay allows for the generation of maps that not only represent the overall functional consequences of mutations, but also serves as a common basis to make maps more directly comparable. In addition, the statistical analysis and machine learning component we introduced supports allows for high overall map quality and completeness. Here we use this framework add a diverse set of six new maps to the atlas of variant effects in human disease genes: SUMO1, TPK1, NCS1, as well as CALM1, CALM2 and CALM3. We discuss 
+In the previous chapter, we established a framework for comprehensive high-quality screening of the functional effects across all possible missense mutations in human genes. The functional complementation assay used in the assay allows for the generation of maps that not only represent the overall functional consequences of mutations, but also serves as a common basis to make maps more directly comparable. In addition, the statistical analysis and machine learning component we introduced supports allows for high overall map quality and completeness. Using this framework we have created a complete functional map for the SUMO E2 conjugase UBE2I. Here we create a map of a second member of the Sumoylation pathway, SUMO1. We examine both map in detail before discussing the interpretation of yeast complementation phenotypes in terms of humans. 
+
+To demonstrate the value of our frameworks in terms of clinical interpretation of variants, we proceed to add a diverse set of six new disease gene maps to our atlas: TPK1 encoding Thiamin Pyrophosphokinase 1, NCS1 encoding Neuronal Calcium Sensor 1, as well as the paralogues CALM1, CALM2 and CALM3, which each encode the protein Calmodulin. We evaluate the maps in terms of pathogenicity prediction and VUS reclassification.
 
 \section{Results}
 
-\todo{Outline the structure of the results section}
+% \todo{Outline the structure of the results section}
 
-\subsection{Functional maps of SUMO1 and its cognate E2 enable biophysical insights}
+\subsection{Functional map of SUMO E2 recapitulates known biology and poses new questions}
 
-\todo{Quickly recap how maps for UBE2I and SUMO1 were made}
+% \todo{Quickly recap how maps for UBE2I and SUMO1 were made}
 
-Based on the DMS map of UBE2I (Figure~\ref{fig:}A) several biochemical observations could be made. Consistent with observations made in smaller-scale biochemical studies of the SUMO E2 conjugase\cite{bencsath_identification_2002,bernier-villamor_structural_2002}, the areas most sensitive to mutation are those proximal to the active site (particularly residues 81-88, 90, 92-96, and 127-130), and the N-terminal alpha helix which mediates four protein interactions including the critical interaction with the E1 SUMO-activating complex. Another interesting feature of the map is the alternating tendency towards damaging and benign substitutions across positions 55-65. A comparison with solvent accessibility reveals this to be caused by alternating externally and internally-oriented residues, with the latter positions constrained to be hydrophobic. This alternating tendency is also reflected in evolutionary conservation across these positions.
+\paragraph{SUMO E2 conjugase:} The DMS map of UBE2I produced in the previous chapter paints a comprehensive picture of variant effects on protein function (Figure~\ref{fig:ube2i-map}). Based on the map, several observations can be made. Consistent with the results of smaller-scale biochemical studies of the SUMO E2 conjugase\cite{bencsath_identification_2002,bernier-villamor_structural_2002}, the areas most sensitive to mutation are those proximal to the active site (particularly residues 81-88, 90, 92-96, and 127-130), and the N-terminal $\alpha$-helix which mediates four protein interactions including the critical interaction with the E1 SUMO-activating complex. Within the active site, particularly strong sensitivity to mutation can be observed at the Cystein residue at position 93. This is consistent with its central role in E2 function, as it forms a thioester bond with the SUMO C-terminus~\cite{bernier-villamor_structural_2002}.
 
-When comparing individual protein interaction interfaces, the most substantial fitness defects are observed in the interfaces for the E1 activating complex binding interface and the  covalent and noncovalent SUMO binding interfaces  (Supplementary Figure S5).  The importance of residues at the interfaces mediating covalent and noncovalent interaction SUMO is made apparent by ‘painting’ the surface of the UBE2I structure with the median fitness score at each residue position (Figure~\ref{fig:ube2i_interfaces}). 
+Another interesting feature of the map is the alternating tendency towards damaging and benign substitutions across positions 55-65. A comparison with solvent accessibility reveals this to be caused by alternating externally and internally-oriented residues, with the latter positions constrained to be hydrophobic. This alternating tendency is also reflected in evolutionary conservation across these positions. 
+
+All protein-protein interaction interfaces previously captured in co-crystal show increased sensitivity to mutation when compared to other surface residues (Figure~\ref{fig:ube2i_interfaces}). When comparing individual protein interaction interfaces, the most substantial fitness defects are observed in those for the E1 activating complex binding interface and the covalent and noncovalent SUMO binding interfaces (Figure~\ref{fig:ube2i_interfaces}A). While the homodimerization interface also shows significant sensitivity, the effects are not as severe as those at the E1 interface (Figure~\ref{fig:ube2i_interfaces}B). This is consitent with the Alontaga and colleagues' hypothesis regarding its involvement in SUMO chaining~\cite{alontaga}, as in yeast SUMO chain formation has so far only been observed to be involved in meiosis, which is not a mechanism vital to fitness in a complementation assay. Alontaga \etal also postulate however, that noncovalent SUMO binding is necessary for SUMO chain formation. In contrast to the homodimerization interface, the noncovalent SUMO binding interface shows a very strong sensitivity to mutation. This may be due to two different reasons: (i) there is a 27\% overlap between the interface for noncovalent SUMO binding interface and the interface for E1-E2 binding, which is among the most sensitive surfaces in UBE2I; and (ii) noncovalent SUMO binding also plays an important role as an adapter for many E3 proteins~\cite{pias}.
 
 \begin{figure}[h!]
 	\centering
@@ -28,25 +32,47 @@ When comparing individual protein interaction interfaces, the most substantial f
 	\label{fig:ube2i_interfaces}
 \end{figure}
 
+
+
+\subsubsection{Substrate specificity shifts and E2 hyperactivity}
+
 Intriguingly, many sites show fitness that is better than wildtype (e.g., positions 74, 76, 88, 89, 91 and 98). Manual functional complementation spotting assays confirmed that complementation with these mutants allows greater growth than does the wild type human protein, but resemble more closely the growth at the permissive temperature for the \textit{ubc9-ts} strain (Figure~\ref{fig:hyperactive}A). One might be tempted to interpret these cases as reversions to residues present in the yeast protein. However, a comparison of fitness score distributions between changes to S. cerevisiae  residues and those occurring in the distant species \species{Dictyostelium~discoideum} (amoeba) or \species{Drosophila~melanogaster} (fly) showed no significant difference (Figure~\ref{fig:hyperactive}B). Recognizing that in this assay, human UBE2I must function with the yeast versions of other sumoylation pathway members, it stands to reason that some substitutions could be adaptive by improving compatibility with yeast interaction partners. A comparison with co-crystal structure data16 shows that many of the apparently-adaptive residues are located on the surface facing the general direction of the substrate, with some being in direct contact with the substrate’s sumoylation motif (Figure~\ref{fig:hyperactive}C). This suggests a possible adaptation via improved recognition of substrates for which sumoylation is most important for yeast growth. Indeed, in vitro sumoylation assays performed previously for a small number of UBE2I mutants revealed increased sumoylation for some substrates15. Comparing our map with these sumoylation assay results, we confirmed that above-WT complementation levels were enriched for cases of substrate specificity shift (Supplementary Figure S8).
 
 
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=\textwidth]{img/hyperactive.pdf}
-	\caption{Hyperactive}
+	\caption{Hyperactive complementation in UBE2I. A) Variants scoring higher than the wildtype controls show stronger growth in manual complementation spotting assays and resemble the WT yeast. B) Distribution of scores for changes to residues naturally occurring in yeast, amoeba and fly are not significantly different from each other. C) Maximum mutant score mapped to amino acid positions on UBE2I structure. Hyperactive mutations are clustered at the substrate recognition site. D) In vitro sumoylation assays performed by Bernier-Villamor~\etal~\cite{bernier-villamor_structural_2002} in comparison to complementation fitness scores.}
 	\label{fig:hyperactive}
 \end{figure}
 
 
-Interestingly, residues A15 and T108 appear adaptive but do not face towards the substrate, instead forming part of the interface with the E3 SUMO ligase RanBP2, and flank a small cavity on UBE2I’s surface into which RanBP2 inserts a phenylalanine residue upon binding. Changing either A15 or T108 into aromatic residues results in a large fitness increase, which may result from gain of a $\pi$-stack interaction that strengthens E2-E3 binding (Supplementary Figure S9).
+As Figure~\ref{hyperactive}D shows, substrate specificity does not paint a complete picture of the mechanisms potentially underlying hyperactive complementation. A particularly interesting exception can be observed at residues A15 and T108. Both residues harbor hyperactive mutations but do not face towards the substrate. Instead, they form part of the interface with the E3 SUMO ligase RanBP2, and flank a small cavity on UBE2I’s surface into which RanBP2 inserts a phenylalanine residue upon binding~\cite{gareau_determinants_2012}. Changing either A15 or T108 into aromatic residues results in a large fitness increase (Figure~\ref{fig:pi-stack}). This may be the result from the emergence of a $\pi$-stack interaction that strengthens E2-E3 binding.
 
-Reasoning that mutations that allow a protein to work better with its yeast partners would generally work less well with its human partners, we wished to test the hypothesis that substitutions exhibiting greater-than-wild-type complementation in yeast tended to be deleterious in humans. We also wished to test more generally whether site-specific models of sequence evolution derived from the UBE2I data are consistent with standard site-specific evolution models that do not use experimental functional assays, as has been shown previously for other DMS data17,18. To investigate both of these questions, we assessed three alternative versions of the UBE2I data, and for each we assessed the extent to which each resulting dataset agreed with standard site-specific evolution models.  The three versions were: a) untransformed;  b) transformed such that adaptive values to be wildtype (i.e., replace scores greater than 1 with 1); and c) transformed such that adaptive values are deleterious (by inverting scores greater than 1 such that score $x$ is replaced by $\frac{1}{x}$ ).  For each version, because imputed and regularized data makes use of conservation data, we avoided circularity by considering only unregularized scores.  We evaluated the likelihood of alignments under: a standard site-specific model that is not informed by DMS19, site-specific models derived from each of three transformed UBE2I DMS datasets, and a site-specific model derived from DMS data that had been randomized between sites (see Methods for details).  Each of the three transformed versions of UBE2I DMS data yielded models that fit aligned homologs better than were obtained using either the standard model or the randomized-sites DMS model.  Of the three models derived from the three transformed DMS versions, model (c) yielded the best-fit according to the Akaike Information Criterion for model selection (see Supplementary Text).  Taken together, our results suggest missense mutations in UBE2I that lead to improved function in yeast are likely to reduce function in humans.
+% \begin{figure}
+% 	\centering
+% 	\includegraphics[width=\textwidth]{img/pi-stack.pdf}
+% 	\caption{Potential de-novo pi-stack interaction between }
+% 	\label{fig:pi-stack}
+% \end{figure}
+
+It is unclear how to interpret the effect of mutations that enhance growth in the yeast complementation assay. If fitness measured in the assay is directly proportional to fitness in the real biological context, then these enhancing mutations would be beneficial. However one can also imagine an alternative scenario in which activity-enhancing mutations are deleterious in the real biological context. To objectively distinguish between these possibilities, we used a method that leverages likelihood-based phylogenetics to quantitatively compare how well different experimental measurements represent actual evolutionary constraints in nature~\cite{bloom_experimentally_2014,bloom_identification_2017}. We compared three models relating the experimental fitness to the evolutionary preference for a mutated amino-acid sequence: (a) the evolutionary preference was directly proportional to the untransformed experimental fitness; (b) the preference had a ceiling at the wildtype experimental fitness (values greater than 1 were set to 1); or (c) the preference was set to the reciprocal of fitness for mutations with greater-than-wildtype scores, corresponding to a deleterious effect of enhancing mutations. We used the phydms software~\cite{bloom_identification_2017} to test which of these three approaches best described the evolutionary constraint on a set of naturally occurring UBE2I homologs, using fitness scores that excluded conservation features from the regularization process, to avoid the circularity of using natural sequence data when deriving the scores. As shown in Table~\ref{tab:phydms}, the best fit is achieved using the model that assumes that enhancing mutations are deleterious. This result provides objective support for the idea that mutations that enhance activity above wildtype levels in the complementation assay are actually deleterious in a real biological context.
+
+Based on these observations we reinterpreted cases of hyperactive complementation in our map as deleterious and repeated the imputation and regularization procedure. This lowered the cross-validation RMSD substantially from 0.33 to 0.24.
+
+\begin{table}
+	\centering
+	\caption{Comparison of different models for the effects of hyperactivating mutations. AIC: Akaike Information Criterion}
+	\begin{tabular}{l l}
+Model & $\delta$AIC relative to best model\\ \hline\hline
+Penalize hyperactive mutations & 0
+Cap score of hyperactive mutations at wildtype level & 27.7
+Hyperactive mutations as beneficial	& 60.6	
+	\end{tabular}{l l l}
+	\label{tab:phydms}
+\end{table}
 
 
-\subsubsection{Functional maps recapitulate known biology}
-
-\subsubsection{Substrate specificity shifts and E2 hyperactivity}
 
 \subsubsection{Intragenic epistasis and compensatory mutations}
 
@@ -60,15 +86,27 @@ Full-length UBE2I clones generated for DMS-BarSEQ analysis often encoded more th
 \end{figure}
 
 
-\subsection{Functional maps of three human disease genes}
+\subsection{A functional map for SUMO1}
 
-Having established and evaluated the framework, we aimed to create maps for a diverse set of genes that have been associated with disease with varying degrees of confidence. Based on the availability of robust complementation assays, we applied DMS-TileSeq to the following protein targets: SUMO1, for which heterozygous null mutations are associated with cleft palate; Thiamine Pyrophosphokinase 1 (TPK1), associated with thiamine pyrophosphokinase deficiency; Neuronal Calcium Sensor 1 (NCS1), which has been implicated in autism based on a single de novo mutation;  and CALM1, CALM2 and CALM3 associated with heart conditions long-QT syndrome and catecholaminergic polymorphic ventricular tachycardia. Although the three calmodulin genes differ in nucleotide sequence, each encodes the same polypeptide sequence. Thus, we performed a deep mutational scan only for CALM1, which enabled us to also map missense variant effects in CALM2 and CALM3. In each case, we used the TileSEQ approach coupled with complementation to generate a map of missense variant functions. 
-
-The most immediately apparent feature of the SUMO1 map was the strong enrichment for neutral substitutions within the first 20 amino acid positions (Figure 4), which is consistent both with the low level of evolutionary conservation for this region and its annotation as a disordered region. The last four amino acid positions appeared similarly insensitive to mutation, consistent with the cleavage of this region by SENP proteases during SUMO maturation. By contrast, other residue positions were strongly sensitive to mutation, including many inward-facing residues that are apparently constrained to be hydrophobic. As expected, the C-terminal diglycine, which is required for covalent binding of SUMO to the E1, E2 and to the sumoylation target protein is also very sensitive to mutation. Other strongly constrained residues are core members of interaction interfaces. These include the central phenylalanine 36 in the SUMO recognition motif (SRM) interface; glycine 68, which forms the apex of a tight turn within the interface with de-sumoylation enzymes, as well as the E1 and E2 proteins; and leucine 80, which is part of the interface with non-covalently bound E2. 
+Using the DMS-TileSeq version of the framework established in the previous chapter we also created a complete functional map for SUMO1 (Figure~\ref{fig:sumo-map}). The most immediately apparent feature of the SUMO1 map was the strong enrichment for neutral substitutions within the first 20 amino acid positions , which is consistent both with the low level of evolutionary conservation for this region and its annotation as a disordered region. The last four amino acid positions appeared similarly insensitive to mutation, consistent with the cleavage of this region by SENP proteases during SUMO maturation. By contrast, other residue positions were strongly sensitive to mutation, including many inward-facing residues that are apparently constrained to be hydrophobic. As expected, the C-terminal diglycine, which is required for covalent binding of SUMO to the E1, E2 and to the sumoylation target protein is also very sensitive to mutation. Other strongly constrained residues are core members of interaction interfaces. These include the central phenylalanine 36 in the SUMO recognition motif (SRM) interface; glycine 68, which forms the apex of a tight turn within the interface with de-sumoylation enzymes, as well as the E1 and E2 proteins; and leucine 80, which is part of the interface with non-covalently bound E2. 
 
 The proximity and orientation of aspartate \#73 and lysine \#48 suggests that they are able to form a salt bridge with one another.  The importance of each residue according to the DMS map supports a model in which this salt bridge is important for SUMO folding and/or stability. Interestingly, substituting aspartate for methionine \#59, which points towards lysine \#48 from an angle similar to that of aspartate \#73, enhances the complementation fitness of SUMO1 beyond wild type levels.  This further underlines the potential importance of a polar interaction involving lysine \#48 (Supplementary Figure S10).
 
-As was shown above for UBE2I, phylogenetic analysis of SUMO1 similarly showed that ‘adaptive’ mutations with ability to complement yeast better than wild-type are likely deleterious in humans ([Supp text]. We therefore transformed fitness scores so that such adaptive mutations are considered to be deleterious (see Methods).  However, because adaptive substitutions may provide interesting clues about differences between yeast and human cellular contexts, we provide both transformed (Figure 5) and untransformed (Supplementary Figure S11) versions of each map.
+% \begin{figure}
+% 	\centering
+% 	\includegraphics[width=\textwidth]{}
+% 	\caption{}
+% 	\label{fig:sumo-map}
+% \end{figure}
+
+As was shown above for UBE2I, phylogenetic analysis of SUMO1 similarly showed that ‘adaptive’ mutations with ability to complement yeast better than wild-type are likely deleterious in humans. We therefore transformed fitness scores so that such adaptive mutations are considered to be deleterious (see Methods).  However, because adaptive substitutions may provide interesting clues about differences between yeast and human cellular contexts, we provide both transformed (Figure 5) and untransformed (Supplementary Figure S11) versions of each map.
+
+
+
+
+\subsection{Functional maps of three human disease genes}
+
+Having established and evaluated the framework, we aimed to create maps for a diverse set of genes that have been associated with disease with varying degrees of confidence. Based on the availability of robust complementation assays, we applied DMS-TileSeq to the following protein targets: SUMO1, for which heterozygous null mutations are associated with cleft palate; Thiamine Pyrophosphokinase 1 (TPK1), associated with thiamine pyrophosphokinase deficiency; Neuronal Calcium Sensor 1 (NCS1), which has been implicated in autism based on a single de novo mutation;  and CALM1, CALM2 and CALM3 associated with heart conditions long-QT syndrome and catecholaminergic polymorphic ventricular tachycardia. Although the three calmodulin genes differ in nucleotide sequence, each encodes the same polypeptide sequence. Thus, we performed a deep mutational scan only for CALM1, which enabled us to also map missense variant effects in CALM2 and CALM3. In each case, we used the TileSEQ approach coupled with complementation to generate a map of missense variant functions. 
 
 Thiamine pyrophosphokinase (TPK1) is a protein that forms a dimer to perform its biochemical function. Its substrate, thiamine diphosphate, is bound within two active sites formed by the dimerization interface22. That is, each monomer contributes half of the residues making up each of the two active sites.  Each monomer in turn is made up of an N-terminal globular domain and a C-terminal β-sandwich domain. The residues most sensitive to mutation in the protein make up the hydrophobic cores of the two domains: L21, V22, W36, G48, Y53, P65, G70, Y83, L108, I122, T124, and G127 for the N-terminal domain; and L161, G168, G199, L200, V227, V229, L236, and W237 for the C-terminal domain. As might have been expected, mutation-sensitive residues include those closely involved in forming the active sites: D46, G70, D71, D73, D100, and K103 in the N-terminal half of the active site, contacting the diphosphate portion of the substrate. In the C-terminal half of the active site, K203, L209, G212, L214, S216, T217, and N219 show similar sensitivity. Interestingly, the tryptophan residue at position 202 appears to be insensitive to mutation despite its close and extensive contact with the thiamine ligand. By contrast, a neighbouring lysine at position 201 is surprisingly sensitive suggesting potential importance in coordinating the ligand.  The remainder of the dimerization interface also features a number of sensitive residues, such as M136, G184, V188, G189 and G211. Finally, residues 1-12, which form a beta-strand anchoring the N-terminal domain back to the C-terminal domain were also found to be sensitive.
 
