--- a/chapter2.tex
+++ b/chapter2.tex
@@ -62,13 +62,13 @@ Based on these observations we reinterpreted cases of hyperactive complementatio
 
 \begin{table}
 	\centering
-	\caption{Comparison of different models for the effects of hyperactivating mutations. AIC: Akaike Information Criterion}
+	\caption{Comparison of different models for the effects of hyperactivating mutations. AIC: Akaike Information Criterion\newline}
 	\begin{tabular}{l l}
-Model & $\delta$AIC relative to best model\\ \hline\hline
-Penalize hyperactive mutations & 0
-Cap score of hyperactive mutations at wildtype level & 27.7
+Model & $\Delta$AIC relative to best model\\ \hline\hline
+Penalize hyperactive mutations & 0\\
+Cap score of hyperactive mutations at wildtype level & 27.7\\
 Hyperactive mutations as beneficial	& 60.6	
-	\end{tabular}{l l l}
+	\end{tabular}
 	\label{tab:phydms}
 \end{table}
 
